--- a/index.html
+++ b/index.html
@@ -45,6 +45,23 @@
         </div>
     </div>
 
+    <div class="modal fade" id="underageWarningModal" tabindex="-1" aria-labelledby="underageWarningModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content p-4 p-md-4">
+                <div class="modal-body text-center">
+                    <p class="text-opacity text-hel mt-3"> <b>MAAF AKSES DILARANG</b> Akses anda dibatasi karena umur
+                        anda. Your access is
+                        restricted
+                        because of your age.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/script.js"></script>
