[add] modal at denied acces

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <p class="text-opacity text-hel mt-3"> <b>MAAF AKSES DILARANG</b> Akses anda dibatasi karena umur
                         anda. Your access is
                         restricted
-                        because of your age.</p>
+                        because of your <br> age.</p>
                 </div>
 
             </div>
