[new] cannot clicked if underage

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="modal fade" id="underageWarningModal" tabindex="-1" aria-labelledby="underageWarningModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-dialog modal-dialog-centered " data-bs-keyboard="false" data-bs-backdrop="static">
             <div class="modal-content p-4 p-md-4">
                 <div class="modal-body text-center">
                     <p class="text-opacity text-hel mt-3"> <b>MAAF AKSES DILARANG</b> Akses anda dibatasi karena umur
